@@ -1,6 +1,7 @@
 
-  * Added a rating listbox to filter even more the library tracks
-  * Added a year listbox to filter even more your library tracks
+  * Added a playcount listbox to filter in library tab
+  * Added a rating listbox to filter in library tab
+  * Added a year listbox to filter in library tab
   * Added File Browser. You can navigate throught your files and play them
     directly from guayadeque.
   * Now the lyrics can be saved to a directory you can configure from preferences -> lyrics
